environments/gloo-edge/rollouts-demo/helloworld-rollout/base/helloworld-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: helloworld-vs
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: upstream-tls
      namespace: gloo-system
  virtualHost:
    domains:
    - 'helloworld.glootest.com'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: helloworld-helloworld-5000
            namespace: gloo-system
